# localsend_rs

./: .gitignore  CHANGELOG.md  README.md  build.yaml  cliff.toml  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  pubspec.yaml  setup.dart
.github/workflows/: abi.yml  build.yml  rust.yml
android/: build.gradle
android/app/: build.gradle
assets/i18n/: strings.i18n.json  strings_zh.i18n.json
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/common/: constants.dart  device_info_utils.dart  string_extensions.dart  utils.dart  widgets.dart
lib/core/listeners/: core_listener.dart  mission_listener.dart  pending_mission_listener.dart
lib/i18n/: strings.g.dart
lib/pages/: frame_page.dart  home_page.dart  setting_page.dart
lib/providers/: core_provider.dart  core_provider.g.dart  locale_provider.dart  locale_provider.g.dart  theme_provider.dart  theme_provider.g.dart
lib/rust/: bridge.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  logger.dart
lib/widget/: mission_widget.dart  node_widget.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  build.cmd
rust/.cargo/: config.toml
rust/src/: bridge.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  logger.rs  util.rs
rust/src/actor/: core.rs  device.rs  discovery.rs  http.rs  mission.rs  mod.rs  model.rs
rust/src/actor/mission/: manage.rs  mission.rs.template.rs  notify.rs  pending.rs  transfer.rs
rust/src/api/: client.rs  mission.rs  mod.rs  model.rs  server.rs  simple.rs  v2.rs
rust/src/bridge/: bridge.rs  mod.rs
rust/src/core/: adapter.rs  mod.rs  model.rs  server.rs
rust/src/discovery/: handler.rs  mod.rs  model.rs
rust/src/session/: mod.rs  model.rs  progress.rs  session.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+59 files in other folders)
