[package]
name = "rust_lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# localsendrs_core = { path = "crates/localsendrs_core" } 
flutter_rust_bridge = "=2.0.0-dev.5"
axum = { version = "0.7.3"}
rand = "0.8.5"
#reqwest = "0.11.23"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tokio-util = "0.7.10"
futures = "0.3.30"
pin-project = "1.1.3"
log = "0.4.20"
lazy_static = "1.4.0"
simplelog = "0.12.1"
parking_lot = "0.12.1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"
