[package]
name = "rust_lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0"
axum = { version = "0.7.3" }
rand = "0.8.5"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
futures = "0.3.30"
log = "0.4.20"
lazy_static = "1.4.0"
simplelog = "0.12.1"
pin-project-lite = "0.2.14"
uuid = { version = "1.9.1", features = ["v4"] }
ureq = "2.9.1"
socket2 = "0.5.7"
parking_lot = "0.12.3"
