[package]
name = "rust_lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.4.0"
axum = { version = "0.7.7" }
rand = "0.8.5"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
futures = "0.3.31"
log = "0.4.22"
lazy_static = "1.5.0"
simplelog = "0.12.2"
pin-project-lite = "0.2.14"
uuid = { version = "1.10.0", features = ["v4"] }
socket2 = "0.5.7"
parking_lot = "0.12.3"
once_cell = "1.20.2"
mime_guess = "2.0.5"
reqwest = { version = "0.12.8", default-features = false, features = ["stream","json", "rustls-tls", "blocking"] }
async-stream = "0.3.6"